<resources>
    <string name="app_name">Search Hotel</string>
    <string name="user_name">User Name:</string>
    <string name="e_mail">E Mail:</string>
    <string name="pass_word">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country:</string>
    <string name="state">State:</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_world">WorldActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>
