<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:text="Search Hotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textView5"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:textAllCaps="true"
        android:textAlignment="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="17dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textColor="@android:color/white"
                android:id="@+id/editText_username"
                android:hint="@string/user_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:textColor="@android:color/white"
                android:id="@+id/editText_email"
                android:hint="@string/e_mail" />

            <TextView
                android:text="   "
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:textColor="@android:color/white"
                android:id="@+id/editText_password"
                android:hint="@string/pass_word" />

            <TextView
                android:text="   "
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textColor="@android:color/white"
                android:id="@+id/editText_firstname"
                android:hint="@string/first_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textColor="@android:color/white"
                android:id="@+id/editText_lastname"
                android:hint="@string/last_name" />

            <TextView
                android:text="   "
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textColor="@android:color/white"
                android:id="@+id/editText_country"
                android:hint="@string/country" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textColor="@android:color/white"
                android:id="@+id/editText_state"
                android:hint="@string/state" />

            <Button
                android:text="Sign Up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_signup"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:text="   "
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
